[package]
name = "se_button"
version = "0.1.0"
authors = ["KenOgura <nekarugo628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.9.0"
serialport = "3.3.0"
csv = "*"
rand = "*"
glob = "*"
device_query = "0.2.3"
clap = "2.33.0"
id3 = "0.5.0"
midir = "0.6.0"
lazy_static = "1.4.0"